--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,26 @@
-body {
+@font-face {
+  font-family: 'Microsoft Sans Serif Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Microsoft Sans Serif Regular'), url('micross.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Microsoft Sans Serif';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Microsoft Sans Serif'), url('micross.woff') format('woff');
+}
+
+html, body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: "Microsoft Sans Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #f0f0f0;
+  background: #151515;
 }
 
 code {
