--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,7 @@
 @font-face {
-  font-family: 'Microsoft Sans Serif Regular';
+  font-family: 'Bahnschrift';
   font-style: normal;
   font-weight: normal;
-  src: local('Microsoft Sans Serif Regular'), url('micross.woff') format('woff');
-}
-
-@font-face {
-  font-family: 'Microsoft Sans Serif';
-  font-style: normal;
-  font-weight: normal;
-  src: local('Microsoft Sans Serif'), url('micross.woff') format('woff');
 }
 
 html, body {
@@ -20,7 +12,7 @@ html, body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #f0f0f0;
-  background: #151515;
+  background: #191919;
 }
 
 code {
