--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,20 @@
 @font-face {
   font-family: 'Bahnschrift';
+  src: url("./fonts/bahnschrift.ttf");
+  font-style: normal;
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Microsoft Sans Serif';
+  src: url("./fonts/micross.ttf");
   font-style: normal;
   font-weight: normal;
 }
 
 html, body {
   margin: 0;
-  font-family: "Microsoft Sans Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: "Bahnschrift", "Microsoft Sans Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
