added parts of react-three-fiber

--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,12 @@
 
 .Header {
   padding: 20px;
+  padding-bottom: 0;
   /* background-color: #555555; */
 }
 
-.Logo {
-  font-size: 25vmin;
+.background {
+  background-color: #555555;
 }
 
 /*.App-header {
