--- a/src/App.css
+++ b/src/App.css
@@ -22,13 +22,32 @@
 }
 
 .Header {
-  padding: 20px;
+  padding: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
   padding-bottom: 0;
-  /* background-color: #555555; */
 }
 
 .background {
-  background-color: #555555;
+  /* background-color: #555555; */
+  height: 100%;
+}
+
+.body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.canvas {
+  /* background-color: #555555; */
+}
+
+.Main {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
 
 /*.App-header {
