--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@
 
 html, body {
   margin: 0;
+  height: 100vh;
+  width: 100vw;
   font-family: "Bahnschrift", "Microsoft Sans Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -26,4 +28,9 @@ html, body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#root {
+  height: 100%;
+  position: relative;
 }
